[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Fonts/Calistoga/Calistoga-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/FinishTrainingGameDialog.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/FinishTrainingGame.gd" type="Script" id=3]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CylinderMesh" id=2]
material = SubResource( 1 )
top_radius = 0.175
bottom_radius = 0.175
height = 0.1

[sub_resource type="CylinderShape" id=3]
radius = 0.18
height = 0.2

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("FinishTrainingGameButton/FinishTrainingGameButtonArea/Viewport")

[node name="FinishTrainingGame" type="Spatial"]
script = ExtResource( 3 )

[node name="FinishTrainingGameButton" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, -0.283461, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="FinishTrainingGameButtonArea" type="Area" parent="FinishTrainingGameButton"]

[node name="CollisionShape" type="CollisionShape" parent="FinishTrainingGameButton/FinishTrainingGameButtonArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0494971, 0 )
shape = SubResource( 3 )

[node name="Viewport" type="Viewport" parent="FinishTrainingGameButton/FinishTrainingGameButtonArea"]
size = Vector2( 300, 300 )
transparent_bg = true
render_target_v_flip = true

[node name="Label" type="Label" parent="FinishTrainingGameButton/FinishTrainingGameButtonArea/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 5 )
text = "Finish"

[node name="Sprite3D" type="Sprite3D" parent="FinishTrainingGameButton"]
transform = Transform( 0.3, 0, 0, 0, 0.00117808, 0.299998, 0, -0.299998, 0.00117808, 0.317942, 0.0530613, 0.384189 )
texture = SubResource( 4 )

[node name="FinishTrainingGameDialog" parent="." instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0.5, 0 )

[connection signal="area_entered" from="FinishTrainingGameButton/FinishTrainingGameButtonArea" to="." method="_on_FinishTrainingGameButtonArea_area_entered"]
